--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,14 @@ services:
     environment:
       XDEBUG_CONFIG: remote_host=172.17.0.1
 
+  eccube_db: 
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    container_name: eccube_db
+    environment:
+      - MYSQL_DATABASE=eccube_db
+      - MYSQL_USER=root
+      - MYQSL_PASSWORD=123
+      - MYSQL_ROOT_PASSWORD=123
+      - MYSQL_ROOT_HOST=%
+
