--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,15 @@ services:
     environment:
       XDEBUG_CONFIG: remote_host=172.17.0.1
 
-  ec4: 
-    image: php:7.2-apache
-    container_name: ec4
-    ports: 
-    - 8899:80
-    volumes:
-      - ./ec4:/var/www/html
-    environment:
-      XDEBUG_CONFIG: remote_host=172.17.0.1
+  # ec4: 
+  #   image: php:7.2-apache
+  #   container_name: ec4
+  #   ports: 
+  #   - 8899:80
+  #   volumes:
+  #     - ./ec4:/var/www/html
+  #   environment:
+  #     XDEBUG_CONFIG: remote_host=172.17.0.1
 
   eccube_db: 
     image: mysql
