--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   #     XDEBUG_CONFIG: remote_host=172.17.0.1
 
   eccube_db: 
-    image: mysql
+    image: mariadb
     command: --default-authentication-plugin=mysql_native_password
     container_name: eccube_db
     environment:
