--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
     image: mariadb
     command: --default-authentication-plugin=mysql_native_password
     container_name: eccube_db
+    ports: 
+      - 3306:3377
+    volumes:
+      - ./mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=eccube_db
       - MYSQL_USER=root
