--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,41 @@
 version: "3.7"
 
 services: 
-  ec2: 
+  ec2:
     build: 
-        context: .
-        dockerfile: Dockerfile.ec2
+      context: .
+      dockerfile: Dockerfile.ec2
     container_name: ec2
     ports: 
-    - 8888:80
+      - 8888:80
     volumes:
       - ./ec2:/var/www/html
     environment:
-      XDEBUG_CONFIG: remote_host=172.17.0.1
-
-  # ec4: 
-  #   image: php:7.2-apache
-  #   container_name: ec4
-  #   ports: 
-  #   - 8899:80
-  #   volumes:
-  #     - ./ec4:/var/www/html
-  #   environment:
-  #     XDEBUG_CONFIG: remote_host=172.17.0.1
-
+      XDEBUG_CONFIG: client_host=192.168.32.1
+    networks: 
+      - eccube_net
+      
   eccube_db: 
     image: mariadb
     command: --default-authentication-plugin=mysql_native_password
     container_name: eccube_db
     ports: 
-      - 3306:3377
-    volumes:
-      - ./mysql:/var/lib/mysql
+      - 3377:3306
+    # volumes:
+    #   - ./mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=eccube_db
       - MYSQL_USER=root
       - MYQSL_PASSWORD=123
       - MYSQL_ROOT_PASSWORD=123
       - MYSQL_ROOT_HOST=%
+    networks:
+      - eccube_net
 
+networks:
+  eccube_net:
+    name: eccube_net
+    ipam:
+      driver: default
+      config: 
+        - subnet: "192.168.32.0/20"
