--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     container_name: eccube_db
     ports: 
       - 3377:3306
-    # volumes:
-    #   - ./mysql:/var/lib/mysql
+    volumes:
+      - ./mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=eccube_db
       - MYSQL_USER=root
