--- a/Dockerfile.ec2
+++ b/Dockerfile.ec2
@@ -26,7 +26,7 @@ RUN sed -i 's/DocumentRoot \/var\/www\/html/DocumentRoot \/var\/www\/html\/html/
         /etc/apache2/sites-available/000-default.conf 
 
 # Open permissions
-RUN chown www-data:www-data -R /var/www/html && chmod -R 777 /var/www/html
+RUN chown www-data:www-data -R /var/www/html && chmod -R 777 /var/www/html && chmod -R 777 /var/lib/mysql
 
 # Install and setupd xdebug
 RUN pecl install xdebug && docker-php-ext-enable xdebug \
