--- a/Dockerfile.ec2
+++ b/Dockerfile.ec2
@@ -28,6 +28,9 @@ RUN sed -i 's/DocumentRoot \/var\/www\/html/DocumentRoot \/var\/www\/html\/html/
 # Open permissions
 RUN chown www-data:www-data -R /var/www/html && chmod -R 777 /var/www/html && chmod -R 777 /var/lib/mysql
 
+# Make a /data/cache directory
+mkdir /var/www/html/data/cache && chmod -R 777 /var/www/html/data/cache
+
 # Install and setupd xdebug
 RUN pecl install xdebug && docker-php-ext-enable xdebug \
         && echo "zend_extension=xdebug.so" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
