--- a/Dockerfile.ec2
+++ b/Dockerfile.ec2
@@ -1,15 +1,5 @@
 FROM php:7.2-apache
 
-# Add some useful aliases
-RUN echo "alias apacherestart='service apache2 restart'" >> ~/.bashrc \
-    && echo "alias c='clear'" >> ~/.bashrc \
-    && echo "alias eee='nano ~/.bashrc'" >> ~/.bashrc \
-    && echo "alias n='nano'" >> ~/.bashrc \
-    && echo "alias rrr='. ~/.bashrc'" >> ~/.bashrc \
-    && echo "alias sys='systemctl'" >> ~/.bashrc \
-    && echo "alias x='exit'" >> ~/.bashrc \
-    && . ~/.bashrc
-
 # Download composer
 RUN php -r "copy('https://getcomposer.org/composer-1.phar', '/usr/bin/composer');" \
     && chmod +x /usr/bin/composer
@@ -19,14 +9,6 @@ RUN apt-get update && apt-get install -y \
          nano unzip zip libzip-dev libicu-dev libpng-dev netcat \
          libjpeg-dev libwebp-dev zlib1g-dev libxpm-dev lynx iputils-ping
 RUN docker-php-ext-install zip mysqli pdo pdo_mysql intl gd
-
-# Apache setup
-RUN a2enmod rewrite
-RUN sed -i 's/DocumentRoot \/var\/www\/html/DocumentRoot \/var\/www\/html\/html/g' \
-        /etc/apache2/sites-available/000-default.conf 
-
-# Open permissions
-RUN chown www-data:www-data -R /var/www/html && chmod -R 777 /var/www/html && chmod -R 777 /var/lib/mysql
 
 # Install and setupd xdebug
 RUN pecl install xdebug && docker-php-ext-enable xdebug \
@@ -39,3 +21,21 @@ RUN pecl install xdebug && docker-php-ext-enable xdebug \
         && echo "xdebug.client_port=9003" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
         && echo "xdebug.discover_client_host=true" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
         && echo "xdebug.idekey=PHPSTORM" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini 
+
+# Apache setup
+RUN a2enmod rewrite
+RUN sed -i 's/DocumentRoot \/var\/www\/html/DocumentRoot \/var\/www\/html\/html/g' \
+        /etc/apache2/sites-available/000-default.conf 
+
+# Open permissions
+RUN chown www-data:www-data -R /var/www/html && chmod -R 777 /var/www/html
+
+# Add some useful aliases
+RUN echo "alias apacherestart='service apache2 restart'" >> ~/.bashrc \
+    && echo "alias c='clear'" >> ~/.bashrc \
+    && echo "alias eee='nano ~/.bashrc'" >> ~/.bashrc \
+    && echo "alias n='nano'" >> ~/.bashrc \
+    && echo "alias rrr='. ~/.bashrc'" >> ~/.bashrc \
+    && echo "alias sys='systemctl'" >> ~/.bashrc \
+    && echo "alias x='exit'" >> ~/.bashrc \
+    && . ~/.bashrc
