--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ ec2/data/cache/*
 ec2/data/logs/*
 
 # Ignore compiled Smarty templates
-ec2/Smarty/templates_c
+ec2/data/Smarty/templates_c
 
 # Ignore installed Composer packages
 ec2/data/vendor
