--- a/ec2/composer.json
+++ b/ec2/composer.json
@@ -28,7 +28,8 @@
         "php-coveralls/php-coveralls": "^1.1",
         "php5friends/codeception-phpunit48-wrapper": ">=6.0.20",
         "php5friends/phpunit48": ">=4.8.41",
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "require": {
         "php": ">=5.4.16",
