--- a/ec2/package.json
+++ b/ec2/package.json
@@ -7,6 +7,7 @@
   "license": "GPL",
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "css-loader": "^3.2.0",
     "jquery": "3",
     "jquery-colorbox": "^1.6.4",
