--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - 3377:3306
     volumes:
       - ./mysql:/var/lib/mysql
+      - ./mysql_init:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_DATABASE=eccube_db
       - MYSQL_USER=root
