--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - eccube_net
       
   eccube_db: 
-    image: mariadb
+    image: mariadb:10.5.8
     command: --default-authentication-plugin=mysql_native_password
     container_name: eccube_db
     ports: 
